--- a/Sidebar/style.css
+++ b/Sidebar/style.css
@@ -5,8 +5,8 @@ body {
 .sidebar {
   position: fixed;
   width: 72px;
-  height: 98%;
-  flex-direction: column;
+  height: 99vh;
+
   align-items: center;
   border: #bfc7d5 2px solid;
   border-radius: 16px;
@@ -194,20 +194,20 @@ nav[aria-label] {
   background: rgba(162, 89, 230, 0.35);
 }
 .profile-container {
-  width: 100%;
-
+  max-width: 100%;
+  box-sizing: border-box;
   bottom: 24px;
   left: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  padding-right: 30px;
 }
 .profile-toggle-label {
   width: 48px;
   height: 48px;
   margin-top: 1px solid;
+  margin-top: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -218,7 +218,7 @@ nav[aria-label] {
   height: 28px;
   border-radius: 20%;
   object-fit: cover;
-  margin-top: 30px;
+  margin-top: 10px;
   margin: 1px solid #bfc7d5;
 }
 .profile-info {
@@ -292,10 +292,10 @@ nav[aria-label] {
 .profile-footer {
   font-size: 0.85rem;
   color: #888;
-  margin: 10px auto;
+  
 
-  margin-top: 30px;
-  margin-left: 30px;
+  margin-top: 20px;
+  margin-left: 20px;
 }
 
 .nav-item.plus {
