--- a/Netflix/style.css
+++ b/Netflix/style.css
@@ -4,58 +4,50 @@
   box-sizing: border-box;
 }
 body {
-  background: #141414
-    url("https://m.media-amazon.com/images/M/MV5BN2FjNmEyNWMtYzM0ZS00NjIyLTg5YzYtYThlMGVjNzE1OGViXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_.jpg")
-    center/cover no-repeat fixed;
+  font-family: "Netflix Sans", "Arial", "Helvetica Neue", "Helvetica",
+    sans-serif;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(20, 20, 20, 0) 60%,
+      rgba(20, 20, 20, 0.95) 100%
+    ),
+    url("/Netflix/img/fondo.webp");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   color: white;
   min-height: 100vh;
   position: relative;
 }
 header {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr auto;
   align-items: center;
   padding: 20px 40px 0 40px;
-  
   position: fixed;
   width: 100%;
   z-index: 100;
+}
+header > div {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  gap: 30px;
 }
 header img {
   width: 32px;
   height: 32px;
 }
-header div {
-  display: flex;
-  align-items: center;
-  gap: 30px;
-}
-section svg {
-  vertical-align: middle;
-  margin-right: 4px;
-}
-.logo {
-  font-size: 1.5rem;
-  font-weight: 700;
-  color: #e50914;
-  display: flex;
-  align-items: center;
-}
-.logo img {
-  height: 2rem;
-  display: block;
-}
-.auth {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  
-}
 .menu {
   display: flex;
   align-items: center;
   gap: 1rem;
-  
+}
+.auth {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 .menu a,
 .auth a {
@@ -66,7 +58,6 @@ section svg {
 .menu a {
   text-transform: uppercase;
 }
-
 .auth span {
   color: #777;
 }
@@ -81,6 +72,7 @@ main {
   justify-content: stretch;
   padding: 0 40px 40px;
   position: relative;
+  gap: 62px;
 }
 .left-content,
 .right-content {
@@ -88,13 +80,13 @@ main {
   display: flex;
   flex-direction: column;
   min-width: 18.75rem;
-  max-width: 31.25rem;
+  max-width: 37.25rem;
 }
 .left-content {
   justify-content: flex-end;
   align-items: flex-start;
   margin-bottom: 7.5rem;
-  margin-left: var(--spacing-lg);
+  margin-left: 2.5rem;
 }
 .left-content section,
 .right-content section {
@@ -107,6 +99,8 @@ main {
   max-width: 56.25rem;
   gap: 1.875rem;
   margin-left: 18.75rem;
+  margin-right: -40px; 
+  overflow: visible; 
 }
 h1 {
   font-size: 4.25rem;
@@ -153,9 +147,11 @@ h2 {
   letter-spacing: 1px;
 }
 .description {
+  margin-top: 2.875rem;
   margin-bottom: 1.875rem;
   line-height: 1.5;
   max-width: 43.75rem;
+  color: rgba(255, 252, 252, 0.548);
 }
 .buttons {
   display: flex;
