--- a/New-york-times/style.css
+++ b/New-york-times/style.css
@@ -1,3 +1,9 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body,
 p,
 li {
@@ -13,6 +19,7 @@ h3,
 header {
   width: 100%;
   height: 10em;
+  padding: 0 4em;
 }
 .nav-container {
   width: 100%;
@@ -22,15 +29,13 @@ header {
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  padding: 0.5rem 5rem;
-  box-sizing: border-box;
+  padding: 0.5rem 1rem;
+  border-bottom: 2px dashed #bbb;
 }
-.nav-superior h1 {
-  flex: 1;
-  text-align: center;
-  margin: 0;
-  font-size: 40px;
-  font-family: "English Towne", "Times New Roman", serif;
+.nav-superior .nyt-logo {
+  display: block;
+  margin: 0 auto;
+  max-width: 220px;
 }
 .nav-superior a {
   text-decoration: none;
@@ -54,7 +59,6 @@ header {
   justify-content: space-between;
   width: 100%;
   padding: 0.5rem 1rem;
-  box-sizing: border-box;
 }
 .nav-inferior ul {
   display: flex;
@@ -96,8 +100,7 @@ main {
   display: flex;
   align-items: center;
   width: 100%;
-  padding: 0.5rem 1rem;
-  box-sizing: border-box;
+  padding: 0.1rem 4em;
   margin-left: 0;
   color: grey;
 }
@@ -105,10 +108,12 @@ main {
   width: 100%;
   display: flex;
   align-items: center;
+
 }
 .notices-row h2 {
   margin-right: 2rem;
   color: black;
+  padding-left: 26px;
 }
 .notices-ul {
   display: flex;
@@ -127,14 +132,18 @@ main {
   display: flex;
   height: auto;
   min-height: 400px;
+  padding: 0 4em 30px 4em;
+
 }
+
 .section-one,
 .section-two,
 .section-three {
   flex: 1;
   min-width: 220px;
   padding: 2em;
-  box-sizing: border-box;
+  padding-bottom: 4em;
+  border-bottom: 2px dashed #bbb;
 }
 .image-container {
   margin-bottom: 30px;
@@ -194,7 +203,6 @@ header a {
 .notices-three h4,
 .notices-three p {
   width: 100%;
-  box-sizing: border-box;
   margin: 0 0 10px 0;
 }
 .notices-one img,
@@ -247,8 +255,19 @@ header a {
 .notices-ul-grid {
   display: grid;
   grid-template-columns: repeat(5, auto);
-  gap: 0.5rem;
+  gap: 1.5rem;
   list-style: none;
   padding: 0;
   margin: 0;
 }
+.nav-inferior-ul-grid a,
+.notices-ul-grid a {
+  text-decoration: none;
+  color: inherit;
+  font-weight: inherit;
+  font-family: inherit;
+  display: inline-block;
+  padding: 0;
+  border-bottom: none;
+}
+
