--- a/New-york-times/style.css
+++ b/New-york-times/style.css
@@ -3,7 +3,10 @@
 *::after {
   box-sizing: border-box;
 }
-
+body {
+  width: 100%;
+  overflow: hidden;
+}
 body,
 p,
 li {
@@ -29,7 +32,7 @@ header {
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0;
   border-bottom: 2px dashed #bbb;
 }
 .nav-superior .nyt-logo {
@@ -45,30 +48,47 @@ header {
   background: transparent;
 }
 .nav-superior .button-subscribe {
-  border: 1px solid grey;
+  border: 1px solid rgb(0, 0, 0);
 }
+
 .nav-superior .icon-search,
 .nav-superior .icon-notification,
-.nav-superior .button-singin,
+.nav-superior .button-signin,
 .nav-superior .button-subscribe {
-  margin: 0 1.5rem;
+  margin: 0;
+  font-size: 15px;
 }
+.icon-search .material-symbols-outlined {
+  color: #000;
+}
+.nav-superior .icon-search .material-symbols-outlined,
+.nav-superior .icon-notification .fa-regular {
+  color: #000;
+}
+
 .nav-inferior {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 3rem;
+}
+.nav-grid {
+  align-items: center;
+  justify-content: center;
 }
 .nav-inferior ul {
   display: flex;
   flex-wrap: wrap;
-  gap: 3.5rem;
+  gap: 2.5rem;
   list-style: none;
   flex: 1;
-  margin-left: 100px;
-  justify-content: flex-start;
+  margin-left: 0;
+  justify-content: flex-end;
   color: grey;
+}
+.material-symbols-outlined {
+  color: #fff;
 }
 .nav-inferior p {
   margin-left: 26px;
@@ -88,9 +108,19 @@ header {
   border-radius: 4px;
   margin-left: 0.5rem;
 }
+.dots-icon a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
 .dots-icon i {
   color: #fff;
+  align-items: center;
+  justify-content: center;
   font-size: 1.2rem;
+  border-radius: 20px;
 }
 main {
   width: 100%;
@@ -108,7 +138,6 @@ main {
   width: 100%;
   display: flex;
   align-items: center;
-
 }
 .notices-row h2 {
   margin-right: 2rem;
@@ -132,8 +161,8 @@ main {
   display: flex;
   height: auto;
   min-height: 400px;
-  padding: 0 4em 30px 4em;
-
+  gap: 3em;
+  padding: 0 1em 30px 4em;
 }
 
 .section-one,
@@ -141,9 +170,8 @@ main {
 .section-three {
   flex: 1;
   min-width: 220px;
-  padding: 2em;
+  padding: 2em 4% 0 4em;
   padding-bottom: 4em;
-  border-bottom: 2px dashed #bbb;
 }
 .image-container {
   margin-bottom: 30px;
@@ -162,7 +190,31 @@ img {
   margin-right: 14px;
 }
 .date {
-  color: grey;
+  color: rgb(0, 0, 0);
+}
+
+.dots {
+  display: flex;
+  gap: 20px;
+  margin-top: 2.9em;
+}
+
+.dots button {
+  background-color: #ccc;
+  border-radius: 50%;
+  cursor: pointer;
+  border: none;
+  height: 16px;
+  width: 16px;
+}
+
+.dots button:first-child {
+  background-color: white;
+  border: 2px solid black;
+}
+h1 {
+  font-size: 2.5rem;
+  margin: 0.5em 0;
 }
 h3 {
   font-size: 30px;
@@ -185,13 +237,14 @@ header a {
 .notices-three {
   display: flex;
   width: 100%;
-  gap: 2em;
+  gap: 5em;
   padding-bottom: 20px;
 }
 .notices-one .text,
 .notices-two .text,
 .notices-three .text {
   width: 50%;
+  height: 60%;
   min-width: 180px;
   display: flex;
   flex-direction: column;
@@ -203,46 +256,31 @@ header a {
 .notices-three h4,
 .notices-three p {
   width: 100%;
-  margin: 0 0 10px 0;
+  margin: 0 0 0px 0;
 }
 .notices-one img,
 .notices-two img,
 .notices-three img {
-  width: 24%;
-  max-width: 90px;
+  width: 32%;
+  max-width: 120px;
   aspect-ratio: 1 / 1;
   height: auto;
-  max-height: 90px;
+  max-height: 120px;
   object-fit: cover;
   align-self: center;
   margin-left: 2%;
 }
 .section-one {
-  border-right: 2px solid #e0e0e0;
+  border-right: 2px dashed #e0e0e0;
 }
 .section-one p {
-  margin-bottom: 5em;
+  margin-bottom: 1.5em;
 }
 .section-two {
-  border-right: 2px solid #e0e0e0;
+  border-right: 2px dashed #e0e0e0;
 }
 .notice-one {
   padding-bottom: 40px;
-}
-.nav-grid {
-  display: grid;
-  align-items: center;
-  grid-template-columns: auto auto 1fr auto auto;
-  gap: 1rem;
-}
-
-.nav-inferior-ul-grid {
-  display: grid;
-  grid-template-columns: repeat(15, auto);
-  gap: 0.5rem;
-  list-style: none;
-  padding: 0;
-  margin: 0;
 }
 
 .notices-row-grid {
@@ -260,7 +298,7 @@ header a {
   padding: 0;
   margin: 0;
 }
-.nav-inferior-ul-grid a,
+
 .notices-ul-grid a {
   text-decoration: none;
   color: inherit;
@@ -271,3 +309,22 @@ header a {
   border-bottom: none;
 }
 
+footer {
+  width: 100%;
+  border-top: 1px dashed #bbb;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #fff;
+  padding: 2em 0;
+  text-align: center;
+  z-index: 100;
+}
+.section-three,
+.nav-inferior {
+  padding-right: 0;
+}
+.sections {
+  padding-right: 36px;
+}
