--- a/Stella Studio/style.css
+++ b/Stella Studio/style.css
@@ -4,6 +4,7 @@ body {
   display: flex;
   flex-direction: column;
   font-family: "Inter", "Segoe UI", sans-serif;
+  
 }
 header {
   height: 10vh;
@@ -19,11 +20,9 @@ header {
   height: 100%;
   margin: 0 auto;
 }
-.logo {
-  font-size: 2rem;
-  font-weight: bold;
-  color: #222;
-  margin-right: 32px;
+img {
+  max-width: 140px;
+  height: auto;
 }
 .main-nav {
   flex: 1;
@@ -78,10 +77,10 @@ main {
   margin-top: 10px;
 }
 .white-section h1 {
-  font-size: 5rem;
-  font-weight: 700;
+  font-size: 4.5rem;
+  font-weight: 500;
   line-height: 1;
-  margin: 0 0 32px 0;
+  margin: 32px 0 32px 0;
   padding-right: 5em;
   text-align: left;
 }
@@ -149,8 +148,13 @@ main {
 }
 .image-content img {
   margin-top: 40px;
-  height: 290px;
-  width: 60%;
+  width: 100%;
+  height: 300px;
+  max-width: 85%;
+  display: block;
+  object-fit: cover;
+  justify-content: center;
+  align-items: center;
 }
 .row {
   display: flex;
